Display user input

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="calculator">
-    <div class="calculator-header">
-      1 024x2
+    <div class="calculator-header" >
+      <input type="text" id="display">
     </div>
 
     <div class="calculator-results">
@@ -20,26 +20,25 @@
       <button type="button">C</button>
       <button type="button">S</button>
       <span></span>
-      <button type="button">÷</button>
-      <button type="button">7</button>
-      <button type="button">8</button>
-      <button type="button">9</button>
-      <button type="button">x</button>
-      <button type="button">4</button>
-      <button type="button">5</button>
-      <button type="button">6</button>
-      <button type="button">-</button>
-      <button type="button">1</button>
-      <button type="button">2</button>
-      <button type="button">3</button>
-      <button type="button">+</button>
+      <input type="button" value="÷">
+      <input type="button" value="7">
+      <input type="button" value="8">
+      <input type="button" value="9">
+      <input type="button" value="x">
+      <input type="button" value="4">
+      <input type="button" value="5">
+      <input type="button" value="6">
+      <input type="button" value="-">
+      <input type="button" value="1">
+      <input type="button" value="2">
+      <input type="button" value="3">
+      <input type="button" value="+">
       <span></span>
-      <button type="button">0</button>
+      <input type="button" value="0">
       <span></span>
       <button type="button">=</button>
     </div>
-
-    
   </div>
+    <script src="./main.js"></script>
 </body>
 </html>
