Add clear function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" disabled class="calculator-results">
     </div>
     <div class="calculator-buttons">
-      <button type="button" class="clear-button">C</button>
+      <button type="button" class="clear-button" id="clear-button">C</button>
       <button type="button" class="save-results">S</button>
       <span></span>
       <input type="button" value="÷" class="operator-button">
