Save data, ip and timestamp in csv file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
   <link rel="stylesheet" href="style.css">
+  <!-- getting ip in js -->
+  <script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
 </head>
 
 <body>
@@ -16,7 +18,7 @@
     </div>
     <div class="calculator-buttons">
       <button type="button" class="clear-button" id="clear-button">C</button>
-      <button type="button" class="save-results">S</button>
+      <button type="button" class="save-results" id="save-button">S</button>
       <span></span>
       <input type="button" value="÷" class="operator-button">
       <input type="button" value="7">
