Check did last char of equation is operator

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <button type="button" class="clear-button" id="clear-button">C</button>
       <button type="button" class="save-results" id="save-button">S</button>
       <span></span>
-      <input type="button" value="÷" class="operator-button">
+      <input type="button" value="/" class="operator-button">
       <input type="button" value="7">
       <input type="button" value="8">
       <input type="button" value="9">
-      <input type="button" value="x" class="operator-button">
+      <input type="button" value="*" class="operator-button">
       <input type="button" value="4">
       <input type="button" value="5">
       <input type="button" value="6">
